--- a/BeyondAbyss/packages.config
+++ b/BeyondAbyss/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Lib.Harmony" version="2.2.2" targetFramework="net48" />
-  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="Lib.Harmony" version="2.3.0-alpha.5" targetFramework="net48" />
+  <package id="Mono.Cecil" version="0.11.5" targetFramework="net48" />
+  <package id="MonoModReorg.Backports" version="23.3.22.1" targetFramework="net48" />
+  <package id="MonoModReorg.Core" version="23.3.22.1" targetFramework="net48" />
+  <package id="MonoModReorg.ILHelpers" version="23.3.22.1" targetFramework="net48" />
+  <package id="MonoModReorg.Utils" version="23.3.22.1" targetFramework="net48" />
 </packages>
