--- a/BeyondAbyss/packages.config
+++ b/BeyondAbyss/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Lib.Harmony" version="2.3.0-alpha.5" targetFramework="net48" />
   <package id="Mono.Cecil" version="0.11.5" targetFramework="net48" />
+  <package id="MonoMod.RuntimeDetour" version="22.7.31.1" targetFramework="net48" />
+  <package id="MonoMod.Utils" version="22.7.31.1" targetFramework="net48" />
   <package id="MonoModReorg.Backports" version="23.3.22.1" targetFramework="net48" />
   <package id="MonoModReorg.Core" version="23.3.22.1" targetFramework="net48" />
   <package id="MonoModReorg.ILHelpers" version="23.3.22.1" targetFramework="net48" />
