better day/night duration modification, sleep does reduced recover of sanity.

--- a/BeyondAbyss/BeyondAbyss.csproj
+++ b/BeyondAbyss/BeyondAbyss.csproj
@@ -105,6 +105,7 @@
     <Compile Include="BeyondAbyss.cs" />
     <Compile Include="Helper\Transpiler.cs" />
     <Compile Include="Patches\Dynamic\HarvestMinigameView_Patch.cs" />
+    <Compile Include="Patches\Dynamic\PlayerSanity_Patch.cs" />
     <Compile Include="Patches\Dynamic\TimeController_Patch.cs" />
     <Compile Include="Patches\Transpiler\TimeController_Transpiler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
