--- a/BeyondAbyss/BeyondAbyss.csproj
+++ b/BeyondAbyss/BeyondAbyss.csproj
@@ -88,6 +88,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\GOG Games\DREDGE\DREDGE_Data\Managed\Unity.Addressables.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.Localization, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\GOG Games\DREDGE\DREDGE_Data\Managed\Unity.Localization.dll</HintPath>
+    </Reference>
     <Reference Include="Unity.ResourceManager, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\GOG Games\DREDGE\DREDGE_Data\Managed\Unity.ResourceManager.dll</HintPath>
@@ -96,17 +100,25 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\GOG Games\DREDGE\DREDGE_Data\Managed\UnityEngine.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.AnimationModule, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\GOG Games\DREDGE\DREDGE_Data\Managed\UnityEngine.AnimationModule.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\GOG Games\DREDGE\DREDGE_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.UI, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\GOG Games\DREDGE\DREDGE_Data\Managed\UnityEngine.UI.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BeyondAbyss.cs" />
     <Compile Include="Helper\Transpiler.cs" />
+    <Compile Include="Patches\Dynamic\BoatActionsDestinationUI_Patch.cs" />
     <Compile Include="Patches\Dynamic\HarvestMinigameView_Patch.cs" />
     <Compile Include="Patches\Dynamic\PlayerSanity_Patch.cs" />
-    <Compile Include="Patches\Dynamic\TimeController_Patch.cs" />
     <Compile Include="Patches\Transpiler\TimeController_Transpiler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Singletons\ConfigManager.cs" />
@@ -115,6 +127,8 @@
     <None Include="app.config" />
     <None Include="mod_meta.json" />
     <None Include="packages.config" />
+    <None Include="Text\de.json" />
+    <None Include="Text\en.json" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
